--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 
 <head>
 <meta charset="UTF-8" />
@@ -44,7 +44,7 @@
     <section class="section">
       <div class="content about">
         <div class="main-title l-font">
-          <div class="s-font">ABOUT BROADWAY</div>
+          <div class="">ABOUT BROADWAY</div>
           <div>影城介紹</div>
         </div>
         <div class="tab actions">
