--- a/account.html
+++ b/account.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
@@ -44,7 +44,7 @@
     <section class="section">
       <div class="content account">
         <div class="main-title l-font">
-          <div class="s-font">MY ACCOUNT</div>
+          <div class="">MY ACCOUNT</div>
           <div>會員資料</div>
         </div>
         <div class="tab actions">
