--- a/book-history.html
+++ b/book-history.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
   <head>
     <meta charset="UTF-8" />
     <title>Broadway Cinemas - 百老匯影城</title>
@@ -43,7 +43,7 @@
       <section class="section">
         <div class="content booking-history">
           <div class="main-title l-font">
-            <div class="s-font">BOOKING HISTORY</div>
+            <div class="">BOOKING HISTORY</div>
             <div>訂票查詢與取消</div>
           </div>
           <div class="actions">
@@ -63,7 +63,7 @@
                     <div class="ticket-no">取票序號<span>#123456789</span></div>
                     <div class="movie-title">
                       <p class="l-font">劫命救護</p>
-                      <span class="s-font">AMBULANCE</span>
+                      <span class="s-font ">AMBULANCE</span>
                     </div>
                     <div class="booking-list content-row">
                       <div class="row-5">
