--- a/book-step2.html
+++ b/book-step2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 
 <head>
 <meta charset="UTF-8" />
@@ -45,7 +45,7 @@
     <section class="section">
       <div class="content book-tickets">
         <div class="main-title l-font">
-          <div class="s-font">ONLINE TICKET</div>
+          <div class="">ONLINE TICKET</div>
           <div>線上訂票</div>
         </div>
         <div class="step-bar">
@@ -65,7 +65,7 @@
               <div class="movie-level y12">護6級</div>
               <div class="movie-title">
                 <p class="l-font">劫命救護</p>
-                <span class="s-font">AMBULANCE</span>
+                <span class="">AMBULANCE</span>
               </div>
             </div>
             <div class="content-row movie-detail">
@@ -102,7 +102,7 @@
     <section class="section">
       <div class="content book-tickets-2">
         <div class="main-title l-font">
-          <div class="s-font">SELECT SEATS</div>
+          <div class="">SELECT SEATS</div>
           <div>請選擇座位</div>
         </div>
         <div class="condition">
