--- a/book.html
+++ b/book.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 
 <head>
-<meta charset="UTF-8" />
-<title>Broadway Cinemas - 百老匯影城</title>
-<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-<meta name="author" content="	Broadway百老匯影城">
-<meta name="copyright" content="Copyright© 2022 Broadway Cinemas All Rights Reserved.">
-<meta name="distribution" content="Taiwan">
-<meta name="rating" content="General">
-<meta name="keywords" content="電影,百老匯影城,影城">
-<meta name="description"
-  content="百老匯影城於2016年底重新裝修，目前擁有11個放映廳，11個放映廳全部升級 Dolby7.1 聲道，1.2.5.7.10.11廳升級為商務廳配備沙發座椅，並於第一排安排了電動座椅，影城全享均一價，觀賞商務廳不須加價。11個放映廳精選首輪商業及藝術電影，歡迎您來體驗。">
-<meta name="url" content="">
-<link rel="canonical" href="">
-<meta property="og:url" content="">
-<meta property="og:image" content="image/favicon.png">
-<meta property="og:image:width" content="1000">
-<meta property="og:image:height" content="523">
-<meta property="og:type" content="article">
-<meta property="og:site_name" content="Broadway百老匯影城">
-<meta property="og:title" content="Broadway百老匯影城">
-<meta property="og:description"
-  content="百老匯影城於2016年底重新裝修，目前擁有11個放映廳，11個放映廳全部升級 Dolby7.1 聲道，1.2.5.7.10.11廳升級為商務廳配備沙發座椅，並於第一排安排了電動座椅，影城全享均一價，觀賞商務廳不須加價。11個放映廳精選首輪商業及藝術電影，歡迎您來體驗。">
-<meta name="theme-color" content="#282828">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black">
-<meta name="apple-mobile-web-app-title" content="Broadway百老匯影城">
-<link rel="apple-touch-icon" sizes="180x180" href="image/favicon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="image/favicon.png">
-<link rel="icon" type="image/png" sizes="16x16" href="image/favicon.png">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-<link rel="stylesheet" href="css/global.min.css" />
-<link rel="stylesheet" href="css/page.min.css" />
+  <meta charset="UTF-8" />
+  <title>Broadway Cinemas - 百老匯影城</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
+  <meta name="author" content="	Broadway百老匯影城">
+  <meta name="copyright" content="Copyright© 2022 Broadway Cinemas All Rights Reserved.">
+  <meta name="distribution" content="Taiwan">
+  <meta name="rating" content="General">
+  <meta name="keywords" content="電影,百老匯影城,影城">
+  <meta name="description"
+    content="百老匯影城於2016年底重新裝修，目前擁有11個放映廳，11個放映廳全部升級 Dolby7.1 聲道，1.2.5.7.10.11廳升級為商務廳配備沙發座椅，並於第一排安排了電動座椅，影城全享均一價，觀賞商務廳不須加價。11個放映廳精選首輪商業及藝術電影，歡迎您來體驗。">
+  <meta name="url" content="">
+  <link rel="canonical" href="">
+  <meta property="og:url" content="">
+  <meta property="og:image" content="image/favicon.png">
+  <meta property="og:image:width" content="1000">
+  <meta property="og:image:height" content="523">
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="Broadway百老匯影城">
+  <meta property="og:title" content="Broadway百老匯影城">
+  <meta property="og:description"
+    content="百老匯影城於2016年底重新裝修，目前擁有11個放映廳，11個放映廳全部升級 Dolby7.1 聲道，1.2.5.7.10.11廳升級為商務廳配備沙發座椅，並於第一排安排了電動座椅，影城全享均一價，觀賞商務廳不須加價。11個放映廳精選首輪商業及藝術電影，歡迎您來體驗。">
+  <meta name="theme-color" content="#282828">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="Broadway百老匯影城">
+  <link rel="apple-touch-icon" sizes="180x180" href="image/favicon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="image/favicon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="image/favicon.png">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link rel="stylesheet" href="css/global.min.css" />
+  <link rel="stylesheet" href="css/page.min.css" />
 
 </head>
 
@@ -45,125 +45,119 @@
     <section class="section">
       <div class="content booking">
         <div class="main-title l-font">
-          <div class="s-font">SESSION TIMES</div>
+          <div class="">SESSION TIMES</div>
           <div>場次資訊</div>
         </div>
         <div class="actions">
           <button class="actions-btn tab-item active">公館百老匯影城</button>
           <button class="actions-btn tab-item">新竹百老匯影城</button>
         </div>
-          <div class="tab-content">
-            <div class="content-row">
-              <div class="row-left row-6">
-                <div class="movie-item row-4">
-                  <img src="image/poster.png" alt="movie-name" />
-                </div>
-                <div class="movie-item row-6">
-                  <div class="movie-level y12">護6級</div>
-                  <div class="movie-title">
-                    <p class="l-font">劫命救護</p>
-                    <span>AMBULANCE</span>
-                  </div>
-                  <div class="up-date">上映日期 2022-03-25</div>
-                  <div class="list-item">
-                    <div class="list-row">導演<div><span>麥可貝</span></div>
-                    </div>
-                    <div class="list-row">演員<div><span>傑克葛倫霍、愛莎岡薩雷、葉海雅阿巴杜馬丁二世傑克葛倫霍傑克葛倫霍、愛莎岡薩雷</span></div>
-                    </div>
-                    <div class="list-row">類型<div><span>動作、懸疑、驚悚、劇情</span></div>
-                    </div>
-                    <div class="list-row">片長<div><span>136分鐘</span></div>
-                    </div>
-                  </div>
-                </div>
+        <div class="tab-content">
+          <div class="content-row">
+            <div class="row-left row-6">
+              <div class="movie-item row-4">
+                <img src="image/poster.png" alt="movie-name" />
               </div>
-              <div class="row-right row-4">
-                <div class="weektable">
-                  <div class="booktime active">08.08<span>星期一</span></div>
-                  <div class="booktime">08.09<span>星期二</span></div>
-                  <div class="booktime">08.10<span>星期三</span></div>
-                  <div class="booktime">08.11<span>星期四</span></div>
-                  <div class="booktime">08.12<span>星期五</span></div>
-                  <div class="booktime">08.13<span>星期六</span></div>
-                  <div class="booktime">08.14<span>星期日</span></div>
+              <div class="movie-item row-6">
+                <div class="movie-level y12">護6級</div>
+                <div class="movie-title">
+                  <p class="l-font">劫命救護</p>
+                  <span>AMBULANCE</span>
                 </div>
-                <div class="cinema">
-                  <span class="material-icons">
-                    video_call
-                  </span>數位標準
-                </div>
-                <div class="timetable">
-                  <div class="time disable"><span>09:00</span></div>
-                  <div class="time active"><span>09:00</span></div>
-                  <div class="time"><span>09:00</span></div>
-                  <div class="time"><span>09:00</span></div>
-                  <div class="time"><span>09:00</span></div>
-                  <div class="time"><span>09:00</span></div>
-                  <div class="time"><span>09:00</span></div>
-                  <div class="time"><span>09:00</span></div>
-                  <div class="time"><span>09:00</span></div>
-                  <div class="time"><span>09:00</span></div>
-                </div>
-                <div class="actions">
-                  <button class="quick-view">
-                    <a href="quick-view.html" target="_blank">
-                      <span><small>QUICK VIEW</small>預覽座位</span>
-                      <span class="material-icons">
-                        chair
-                      </span>
-                    </a>
-                 </button>
-                  <button class="buy-ticket">
-                    <a href="book-step1.html">
-                    <span><small>BUY TICKET</small>前往訂票</span>
-                    <span class="material-icons">
-                    confirmation_number
-                  </span>
-                  </a>
-                </button>
+                <div class="up-date">上映日期 2022-03-25</div>
+                <div class="list-item">
+                  <div class="list-row"><span>導演</span><span>麥可貝</span></div>
+                  <div class="list-row"><span>演員</span><span>傑克葛倫霍、愛莎岡薩雷、葉海雅阿巴杜馬丁二世傑克葛倫霍傑克葛倫霍、愛莎岡薩雷傑克葛倫</span>
+                  </div>
+                  <div class="list-row"><span>類型</span><span>動作、懸疑、驚悚、劇情</span></div>
+                  <div class="list-row"><span>片長</span><span>136分鐘</span></div>
                 </div>
               </div>
             </div>
-            <div class="content-row">
-              <div class="row-left row-6">
-                <div class="movie-item row-4">
-                  <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
+            <div class="row-right row-4">
+              <div class="weektable">
+                <div class="booktime active">08.08<span>星期一</span></div>
+                <div class="booktime">08.09<span>星期二</span></div>
+                <div class="booktime">08.10<span>星期三</span></div>
+                <div class="booktime">08.11<span>星期四</span></div>
+                <div class="booktime">08.12<span>星期五</span></div>
+                <div class="booktime">08.13<span>星期六</span></div>
+                <div class="booktime">08.14<span>星期日</span></div>
+              </div>
+              <div class="cinema">
+                <span class="material-icons">
+                  video_call
+                </span>數位標準
+              </div>
+              <div class="timetable">
+                <div class="time disable"><span>09:00</span></div>
+                <div class="time active"><span>09:00</span></div>
+                <div class="time"><span>09:00</span></div>
+                <div class="time"><span>09:00</span></div>
+                <div class="time"><span>09:00</span></div>
+                <div class="time"><span>09:00</span></div>
+                <div class="time"><span>09:00</span></div>
+                <div class="time"><span>09:00</span></div>
+                <div class="time"><span>09:00</span></div>
+                <div class="time"><span>09:00</span></div>
+              </div>
+              <div class="actions">
+                <button class="quick-view">
+                  <a href="quick-view.html" target="_blank">
+                    <span><small>QUICK VIEW</small>預覽座位</span>
+                    <span class="material-icons">
+                      chair
+                    </span>
+                  </a>
+                </button>
+                <button class="buy-ticket">
+                  <a href="book-step1.html">
+                    <span><small>BUY TICKET</small>前往訂票</span>
+                    <span class="material-icons">
+                      confirmation_number
+                    </span>
+                  </a>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="content-row">
+            <div class="row-left row-6">
+              <div class="movie-item row-4">
+                <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
+              </div>
+              <div class="movie-item row-6">
+                <div class="movie-level y12">護6級</div>
+                <div class="movie-title">
+                  <p class="l-font">如果30歲還是處男，似乎就能成為魔法師</p>
+                  <span>Cherry Magic! Thirty Years Of Virginity Can Make You A Wizard ?!</span>
                 </div>
-                <div class="movie-item row-6">
-                  <div class="movie-level y12">護6級</div>
-                  <div class="movie-title">
-                    <p class="l-font">如果30歲還是處男，似乎就能成為魔法師</p>
-                    <span>Cherry Magic! Thirty Years Of Virginity Can Make You A Wizard ?!</span>
+                <div class="up-date">上映日期 2022-03-25</div>
+                <div class="list-item">
+                  <div class="list-row"><span>導演</span><span>麥可貝</span></div>
+                  <div class="list-row"><span>演員</span><span>傑克葛倫霍、愛莎岡薩雷、葉海雅阿巴杜馬丁二世傑克葛倫霍傑克葛倫霍、愛莎岡薩雷傑克葛倫</span>
                   </div>
-                  <div class="up-date">上映日期 2022-03-25</div>
-                  <div class="list-item">
-                    <div class="list-row">導演<div><span>麥可貝</span></div>
-                    </div>
-                    <div class="list-row">演員<div><span>傑克葛倫霍、愛莎岡薩雷、葉海雅阿巴杜馬丁二世傑克葛倫霍傑克葛倫霍、愛莎岡薩雷</span></div>
-                    </div>
-                    <div class="list-row">類型<div><span>動作、懸疑、驚悚、劇情</span></div>
-                    </div>
-                    <div class="list-row">片長<div><span>136分鐘</span></div>
-                    </div>
-                  </div>
+                  <div class="list-row"><span>類型</span><span>動作、懸疑、驚悚、劇情</span></div>
+                  <div class="list-row"><span>片長</span><span>136分鐘</span></div>
                 </div>
               </div>
-              <div class="row-right row-4">
-                <div class="weektable">
-                  <div class="booktime active">08.08<span>星期一</span></div>
-                  <div class="booktime">08.09<span>星期二</span></div>
-                  <div class="booktime">08.10<span>星期三</span></div>
-                  <div class="booktime">08.11<span>星期四</span></div>
-                  <div class="booktime">08.12<span>星期五</span></div>
-                  <div class="booktime">08.13<span>星期六</span></div>
-                  <div class="booktime">08.14<span>星期日</span></div>
-                </div>
-                <div class="cinema">
-                  <span class="material-icons">
-                    video_call
-                  </span>數位標準
-                </div>
-                <div class="timetable">
+            </div>
+            <div class="row-right row-4">
+              <div class="weektable">
+                <div class="booktime active">08.08<span>星期一</span></div>
+                <div class="booktime">08.09<span>星期二</span></div>
+                <div class="booktime">08.10<span>星期三</span></div>
+                <div class="booktime">08.11<span>星期四</span></div>
+                <div class="booktime">08.12<span>星期五</span></div>
+                <div class="booktime">08.13<span>星期六</span></div>
+                <div class="booktime">08.14<span>星期日</span></div>
+              </div>
+              <div class="cinema">
+                <span class="material-icons">
+                  video_call
+                </span>數位標準
+              </div>
+              <div class="timetable">
                 <div class="time disable"><span>09:00</span></div>
                 <div class="time"><span>09:00</span></div>
                 <div class="time"><span>09:00</span></div>
@@ -172,11 +166,11 @@
                 <div class="time"><span>09:00</span></div>
                 <div class="time"><span>09:00</span></div>
                 <div class="time"><span>09:00</span></div>
-                </div>
               </div>
             </div>
           </div>
-       </div>
+        </div>
+      </div>
     </section>
   </main>
   <!-- main container -->
