--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 
 <head>
   <meta charset="UTF-8" />
@@ -44,7 +44,7 @@
     <section class="section">
       <div class="content contact">
         <div class="main-title l-font">
-          <div class="s-font">CONTACT US</div>
+          <div class="">CONTACT US</div>
           <div>聯繫我們</div>
         </div>
         <div class="tab actions">
