--- a/discount.html
+++ b/discount.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 
 <head>
 <meta charset="UTF-8" />
@@ -45,7 +45,7 @@
     <section class="section">
       <div class="content">
         <div class="main-title l-font">
-          <div class="s-font">MEMBERSHIP DISCOUNT</div>
+          <div class="">MEMBERSHIP DISCOUNT</div>
           <div>會員優惠</div>
         </div>
     </section>
