--- a/group-ticket.html
+++ b/group-ticket.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 
 <meta charset="UTF-8" />
 <title>Broadway Cinemas - 百老匯影城</title>
@@ -43,12 +43,12 @@
     <section class="section">
       <div class="content group-ticket">
         <div class="main-title l-font">
-          <div class="s-font">GROUP TICKET</div>
+          <div class="">GROUP TICKET</div>
           <div>業務專區</div>
         </div>
         <div class="content-row project">
           <div class="row-5 row-left">
-            <img src="https://fakeimg.pl/450x250/" alt="event-name" />
+            <img src="https://fakeimg.pl/720x480/" alt="event-name" />
           </div>
           <div class="row-5 row-right">
             <div>
@@ -70,7 +70,7 @@
         </div>
         <div class="content-row project">
           <div class="row-5 row-left">
-            <img src="https://fakeimg.pl/450x250/" alt="event-name" />
+            <img src="https://fakeimg.pl/720x480/" alt="event-name" />
           </div>
           <div class="row-5 row-right">
             <div>
