--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 
 <head>
   <meta charset="UTF-8" />
@@ -36,13 +36,101 @@
   <link rel="stylesheet" href="css/page.min.css" />
 
   <style>
-   .carousel{ position: relative;} .swiper-slide a{ display: inline-block; min-height: 300px;} @media all and (max-width: 1200px){ .swiper-slide a{ min-height: 100px;}} .swiper-slide img{ width: 100%; max-height: 740px;} .swiper-pagination{ display: flex; width: 100%; justify-content: center; align-items: center; margin-top: 5px;} .swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal{ width: fit-content !important;} .swiper-pagination-bullet{ border: 1px solid #c7c7c7; background-color: transparent; width: 8px; height: 8px; opacity: 1; margin: 3px !important;} .swiper-pagination-bullet-active{ background-color: #fff!important; border-color: #fff;} .swiper-button-next, .swiper-button-prev{ position: static !important; ; height: fit-content; width: 30px; margin: 0;} .swiper-button-prev:after, .swiper-rtl .swiper-button-next:after{ content: url('data:image/svg+xml;utf8,<svg width="10" height="13" viewBox="0 0 10 13" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.286023 7.03462L8.95386 12.8845C9.05389 12.952 9.17095 12.9915 9.29236 12.9988C9.41377 13.006 9.53492 12.9808 9.64267 12.9258C9.75042 12.8707 9.84067 12.788 9.90365 12.6866C9.96664 12.5851 9.99996 12.4688 10 12.3502V0.65042C10.0001 0.531782 9.96685 0.415385 9.90391 0.313844C9.84098 0.212302 9.75073 0.12949 9.64296 0.074381C9.53519 0.019272 9.414 -0.00603138 9.29253 0.00121319C9.17106 0.00845776 9.05394 0.0479739 8.95386 0.115479L0.286023 5.96538C0.197717 6.02546 0.125599 6.10544 0.0758019 6.19852C0.0260045 6.2916 0 6.39502 0 6.5C0 6.60498 0.0260045 6.7084 0.0758019 6.80148C0.125599 6.89456 0.197717 6.97454 0.286023 7.03462V7.03462Z" fill="white"/></svg>') !important; font-size: initial;} .swiper-button-next:after, .swiper-rtl .swiper-button-prev:after{ content: url('data:image/svg+xml;utf8,<svg width="10" height="13" viewBox="0 0 10 13" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M9.71398 5.96538L1.04614 0.115477C0.946112 0.0480033 0.829053 0.00849185 0.70764 0.00122107C0.586227 -0.00604972 0.465086 0.019197 0.357336 0.0742278C0.249586 0.129259 0.159332 0.211977 0.0963461 0.313425C0.0333602 0.414873 4.29002e-05 0.531186 1.83781e-06 0.649769L8.14978e-07 12.3496C-7.98365e-05 12.4682 0.0331485 12.5846 0.0960856 12.6862C0.159023 12.7877 0.249268 12.8705 0.35704 12.9256C0.464812 12.9807 0.586001 13.006 0.707472 12.9988C0.828943 12.9915 0.946065 12.952 1.04614 12.8845L9.71398 7.03462C9.80228 6.97454 9.8744 6.89456 9.9242 6.80148C9.974 6.7084 10 6.60498 10 6.5C10 6.39502 9.974 6.2916 9.9242 6.19852C9.8744 6.10544 9.80228 6.02546 9.71398 5.96538V5.96538Z" fill="white"/></svg>') !important; font-size: initial;} .swiper-button-next.swiper-button-disabled::after{ content: url('data:image/svg+xml;utf8,<svg width="10" height="13" viewBox="0 0 10 13" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.500001 12.3496L0.500001 12.3499C0.499984 12.3747 0.506868 12.3998 0.521072 12.4227C0.535348 12.4458 0.556887 12.4662 0.584679 12.4804C0.612557 12.4947 0.644814 12.5016 0.677705 12.4997C0.710585 12.4977 0.741294 12.487 0.766538 12.47L9.43272 6.62122C9.4329 6.6211 9.43307 6.62099 9.43324 6.62087C9.45535 6.6057 9.47217 6.58646 9.48333 6.56561L9.92131 6.79993L9.48333 6.56561C9.49453 6.54467 9.5 6.52221 9.5 6.5C9.5 6.47779 9.49453 6.45533 9.48333 6.43439C9.47217 6.41354 9.45535 6.3943 9.43324 6.37913C9.43307 6.37902 9.4329 6.3789 9.43272 6.37878L0.76654 0.529991L0.500001 12.3496ZM0.500001 12.3496L0.500002 0.649942C0.500011 0.625191 0.506914 0.600061 0.521132 0.577163C0.535425 0.55414 0.556972 0.533704 0.584754 0.519515C0.612629 0.505279 0.644874 0.498358 0.677751 0.500326C0.710569 0.502292 0.741222 0.512941 0.766435 0.529921L0.500001 12.3496Z" stroke="white"/></svg>') !important;} .swiper-button-prev.swiper-button-disabled::after{ content: url('data:image/svg+xml;utf8,<svg width="10" height="13" viewBox="0 0 10 13" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.566754 6.62086C0.566928 6.62098 0.567103 6.6211 0.567277 6.62122L9.23346 12.47L0.566754 6.62086ZM0.566754 6.62086C0.544646 6.6057 0.527826 6.58646 0.516672 6.56561C0.505467 6.54467 0.5 6.52221 0.5 6.5C0.5 6.47779 0.505467 6.45533 0.516672 6.43439C0.527827 6.41354 0.544647 6.3943 0.566758 6.37913C0.566931 6.37902 0.567104 6.3789 0.567277 6.37878L9.23346 0.529994L0.566754 6.62086ZM9.5 0.65042V0.65008C9.50002 0.625316 9.49313 0.600172 9.47893 0.577258C9.46465 0.554224 9.44311 0.533767 9.41532 0.519556C9.38744 0.505301 9.35519 0.498365 9.3223 0.500326C9.28946 0.502285 9.25879 0.512935 9.23357 0.529923L9.5 0.65042ZM9.5 0.65042V12.3501C9.49999 12.3748 9.49309 12.3999 9.47887 12.4228C9.46458 12.4459 9.44303 12.4663 9.41525 12.4805C9.38737 12.4947 9.35513 12.5016 9.32225 12.4997C9.28943 12.4977 9.25878 12.4871 9.23357 12.4701L9.5 0.65042Z" stroke="white"/></svg>') !important;} .swiper-lazy-preloader-white{ opacity: 0.5;}
+    body,
+    html {
+      background-color: #191919!important;
+    }
+
+    .carousel {
+      position: relative;
+    }
+
+    .swiper-slide a {
+      display: inline-block;
+      min-height: 300px;
+    }
+
+    @media all and (max-width: 1200px) {
+      .swiper-slide a {
+        min-height: 100px;
+      }
+    }
+
+    .swiper-slide img {
+      width: 100%;
+      max-height: 740px;
+    }
+
+    .swiper-pagination {
+      display: flex;
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+      margin-top: 10px;
+    }
+
+    .swiper-pagination-bullets,
+    .swiper-pagination-bullets.swiper-pagination-horizontal {
+      width: fit-content !important;
+    }
+
+    .swiper-pagination-bullet {
+      border: 1px solid #D7D7D7;
+      background-color: transparent;
+      width: 14px!important;
+      height: 14px!important;
+      opacity: 1;
+      margin: 0 20px 0 0!important;
+    }
+    .swiper-pagination-bullet:last-of-type {
+      margin: 0!important;
+    }
+
+    .swiper-pagination-bullet-active {
+      background-color: #fff !important;
+      border-color: #fff;
+    }
+
+    .swiper-button-next,
+    .swiper-button-prev {
+      position: static !important;
+      height: fit-content;
+      width: fit-content;
+      margin: 0;
+    }
+
+    .swiper-button-next{margin-left: 30px;}
+    .swiper-button-prev{margin-right: 30px;}
+
+    .swiper-button-prev:after,
+    .swiper-rtl .swiper-button-next:after {
+      content: url("data:image/svg+xml,%3Csvg width='15' height='17' viewBox='0 0 15 17' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11.53 16.72C11.8291 16.9085 12.1765 17.0058 12.53 17C12.8132 16.9922 13.0893 16.9094 13.33 16.76C13.6263 16.6093 13.8759 16.3807 14.0521 16.0988C14.2283 15.8169 14.3244 15.4924 14.33 15.16V1.81C14.3221 1.32722 14.1248 0.866879 13.7806 0.528274C13.4364 0.189669 12.9728 -6.41494e-05 12.49 1.6269e-08C12.1741 0.00838455 11.865 0.094232 11.59 0.25L0.92 6.94C0.646435 7.10009 0.418321 7.32744 0.257307 7.60046C0.0962935 7.87349 0.00772228 8.18313 0 8.5C0.00229479 8.81081 0.0832881 9.11598 0.235422 9.38702C0.387556 9.65806 0.605873 9.88615 0.87 10.05L11.53 16.72Z' fill='white'/%3E%3C/svg%3E%0A") !important;
+      font-size: initial;
+    }
+
+    .swiper-button-next:after,
+    .swiper-rtl .swiper-button-prev:after {
+      content: url("data:image/svg+xml,%3Csvg width='15' height='17' viewBox='0 0 15 17' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0.277899 16.0993C0.45408 16.3811 0.703715 16.6097 1 16.7604C1.2552 16.9186 1.54976 17.0018 1.85 17.0004C2.20345 17.0062 2.55093 16.9089 2.85 16.7204L13.53 10.0604C13.7956 9.89569 14.0148 9.66602 14.167 9.39309C14.3192 9.12015 14.3994 8.81295 14.4 8.50044C14.3957 8.18015 14.3087 7.86641 14.1475 7.5896C13.9864 7.31279 13.7564 7.08229 13.48 6.92044L2.78 0.25044C2.505 0.094672 2.19594 0.00882456 1.88 0.000440042C1.63753 -0.00486367 1.3964 0.0378211 1.17048 0.126039C0.944563 0.214258 0.738314 0.346269 0.563597 0.51448C0.38888 0.682692 0.249142 0.883785 0.152419 1.10619C0.0556956 1.3286 0.00389631 1.56794 0 1.81044V15.1604C0.00564655 15.4928 0.101718 15.8174 0.277899 16.0993Z' fill='white'/%3E%3C/svg%3E%0A") !important;
+      font-size: initial;
+    }
+
+    .swiper-button-next.swiper-button-disabled::after {
+      content: url("data:image/svg+xml,%3Csvg width='15' height='17' viewBox='0 0 15 17' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.82 17.0002C1.50882 17.0026 1.20345 16.9159 0.94 16.7502C0.657173 16.594 0.421032 16.3653 0.255832 16.0877C0.0906331 15.81 0.00233207 15.4933 0 15.1702V1.81025C0.00390769 1.56861 0.0553801 1.3301 0.151477 1.10836C0.247575 0.88661 0.386414 0.685966 0.560066 0.517886C0.733718 0.349806 0.938781 0.217581 1.16354 0.128764C1.3883 0.0399464 1.62836 -0.00372338 1.87 0.000248537C2.18298 0.00735546 2.4891 0.0933446 2.76 0.250249L13.45 6.93025C13.7244 7.09098 13.9525 7.3201 14.112 7.59526C14.2715 7.87042 14.3569 8.18222 14.36 8.50025C14.3594 8.81276 14.2792 9.11996 14.127 9.3929C13.9748 9.66583 13.7556 9.8955 13.49 10.0602L2.81 16.7202C2.51046 16.9077 2.1633 17.0049 1.81 17.0002H1.82ZM1.82 1.00025C1.6014 1.00268 1.39215 1.08925 1.23572 1.24196C1.07928 1.39467 0.987702 1.60177 0.98 1.82025V15.1602C0.983581 15.3097 1.02604 15.4556 1.1032 15.5836C1.18036 15.7116 1.28955 15.8173 1.42 15.8902C1.53679 15.9635 1.67215 16.0017 1.81 16.0002C1.96656 16.0033 2.12023 15.9579 2.25 15.8702L12.96 9.20025C13.0808 9.12488 13.1807 9.02037 13.2506 8.89631C13.3205 8.77225 13.3581 8.63263 13.36 8.49025C13.3553 8.34749 13.3142 8.20828 13.2408 8.0858C13.1673 7.96331 13.0637 7.86159 12.94 7.79025L2.24 1.10025C2.12003 1.03579 1.98618 1.00147 1.85 1.00025H1.82Z' fill='white'/%3E%3C/svg%3E%0A") !important;
+    }
+
+    .swiper-button-prev.swiper-button-disabled::after {
+      content: url("data:image/svg+xml,%3Csvg width='15' height='17' viewBox='0 0 15 17' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12.52 17.0002C12.1667 17.0049 11.8195 16.9077 11.52 16.7202L0.87 10.0502C0.605873 9.8864 0.387556 9.65831 0.235422 9.38727C0.0832881 9.11623 0.00229479 8.81106 0 8.50025C0.00648169 8.18564 0.0935424 7.87794 0.252862 7.60657C0.412181 7.33521 0.638435 7.10923 0.91 6.95025L11.6 0.250249C11.8709 0.0933446 12.177 0.00735546 12.49 0.000248537C12.7316 -0.00372338 12.9717 0.0399464 13.1965 0.128764C13.4212 0.217581 13.6263 0.349806 13.7999 0.517886C13.9736 0.685966 14.1124 0.88661 14.2085 1.10836C14.3046 1.3301 14.3561 1.56861 14.36 1.81025V15.1702C14.3577 15.4933 14.2694 15.81 14.1042 16.0877C13.939 16.3653 13.7028 16.594 13.42 16.7502C13.1565 16.9159 12.8512 17.0026 12.54 17.0002H12.52ZM12.52 1.00025C12.3838 1.00147 12.25 1.03579 12.13 1.10025L1.42 7.79025C1.29625 7.86159 1.19274 7.96331 1.11925 8.0858C1.04576 8.20828 1.00471 8.34749 1 8.49025C1.00187 8.63263 1.03948 8.77225 1.10937 8.89631C1.17926 9.02037 1.27919 9.12488 1.4 9.20025L12.08 15.8702C12.2098 15.9579 12.3634 16.0033 12.52 16.0002C12.6579 16.0017 12.7932 15.9635 12.91 15.8902C13.0405 15.8173 13.1496 15.7116 13.2268 15.5836C13.304 15.4556 13.3464 15.3097 13.35 15.1602V1.82025C13.3423 1.60177 13.2507 1.39467 13.0943 1.24196C12.9379 1.08925 12.7286 1.00268 12.51 1.00025H12.52Z' fill='white'/%3E%3C/svg%3E%0A") !important;
+    }
+
+    .swiper-lazy-preloader-white {
+      opacity: 0.5;
+    }
   </style>
 </head>
 
 <body id="app">
   <!-- landing -->
-  <div class="landing">
+  <!-- <div class="landing">
     <div class="landing-page">
       <h1 style="--td: .8s">
         <div class="block-reveal" style="--bc: #C53932; --d: .6s">BROADWAY</div>
@@ -56,8 +144,8 @@
         <div class="scroller"></div>
       </div>
     </div>
-  </div>
-  
+  </div> -->
+
   <!-- header -->
   <nav-header></nav-header>
 
@@ -66,20 +154,20 @@
     <div class="swiper s-swiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <a href="">
-            <img data-src="image/123.jpg" class="swiper-lazy" />
+          <a href="" aria-label="百老匯影城資訊">
+            <img data-src="https://picsum.photos/1920/740" alt="輪播圖" class="swiper-lazy" />
             <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
           </a>
         </div>
         <div class="swiper-slide">
-          <a href="">
-            <img data-src="image/123.jpg" class="swiper-lazy" />
+          <a href="" aria-label="百老匯影城資訊">
+            <img data-src="https://picsum.photos/1920/740" alt="輪播圖" class="swiper-lazy" />
             <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
           </a>
         </div>
         <div class="swiper-slide">
-          <a href="">
-            <img data-src="image/123.jpg" class="swiper-lazy" />
+          <a href="" aria-label="百老匯影城資訊">
+            <img data-src="https://picsum.photos/1920/740" alt="輪播圖" class="swiper-lazy" />
             <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
           </a>
         </div>
@@ -96,7 +184,7 @@
   <main class="section-box">
     <section class="section">
       <div class="main-title l-font">
-        <div class="s-font">NOW SHOWING</div>
+        <div class="">NOW SHOWING</div>
         <div>現正熱映</div>
       </div>
       <div class="content content-row">
@@ -104,11 +192,11 @@
           <div class="state s-font recommand">影城推薦</div>
           <a href="movie-info.html">
             <div class="poster">
-              <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
+              <img src="https://fakeimg.pl/300x425/" alt="movie-name" />
             </div>
             <div class="movie-title">
               <p class="l-font ellipsis">劫命救護</p>
-              <span class="s-font ellipsis">AMBULANCE</span>
+              <span class="s-font ellipsis ">AMBULANCE</span>
             </div>
             <div class="movie-level s-font y12">輔12級</div>
             <div class="s-font">上映日期 2022-03-25</div>
@@ -118,11 +206,11 @@
           <div class="state s-font newin">最新上映</div>
           <a href="">
             <div class="poster">
-              <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
+              <img src="https://fakeimg.pl/300x425/" alt="movie-name" />
             </div>
             <div class="movie-title l-font mul-ellipsis-1">
               <p class="l-font ellipsis">劫命救護</p>
-              <span class="s-font ellipsis">AMBULANCE</span>
+              <span class="s-font ellipsis ">AMBULANCE</span>
             </div>
             <div class="movie-level s-font y15">輔15級</div>
             <div class="s-font">上映日期 2022-03-25</div>
@@ -132,11 +220,11 @@
           <div class="state s-font hottest">票房第一</div>
           <a href="">
             <div class="poster">
-              <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
+              <img src="https://fakeimg.pl/300x425/" alt="movie-name" />
             </div>
             <div class="movie-title l-font mul-ellipsis-1">
               <p class="l-font ellipsis">劫命救護</p>
-              <span class="s-font ellipsis">AMBULANCE</span>
+              <span class="s-font ellipsis ">AMBULANCE</span>
             </div>
             <div class="movie-level s-font yp">保護級</div>
             <div class="s-font">上映日期 2022-03-25</div>
@@ -145,11 +233,11 @@
         <div class="showing-list row-2">
           <a href="">
             <div class="poster">
-              <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
+              <img src="https://fakeimg.pl/300x425/" alt="movie-name" />
             </div>
             <div class="movie-title l-font mul-ellipsis-1">
               <p class="l-font ellipsis">劫命救護</p>
-              <span class="s-font ellipsis">AMBULANCE</span>
+              <span class="s-font ellipsis ">AMBULANCE</span>
             </div>
             <div class="movie-level s-font yn">普通級</div>
             <div class="s-font">上映日期 2022-03-25</div>
@@ -158,11 +246,11 @@
         <div class="showing-list row-2">
           <a href="">
             <div class="poster">
-              <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
+              <img src="https://fakeimg.pl/300x425/" alt="movie-name" />
             </div>
             <div class="movie-title l-font mul-ellipsis-1">
               <p class="l-font ellipsis">劫命救護</p>
-              <span class="s-font ellipsis">AMBULANCE</span>
+              <span class="s-font ellipsis ">AMBULANCE</span>
             </div>
             <div class="movie-level s-font R">限制級</div>
             <div class="s-font">上映日期 2022-03-25</div>
@@ -174,12 +262,12 @@
       <div class="content content-row">
         <div class="onlinebook row-5">
           <div class="main-title l-font">
-            <div class="s-font">ONLINE BOOK</div>
+            <div class="">ONLINE BOOK</div>
             <div>快速訂票</div>
           </div>
           <div class="select-box">
             <div>
-              <span class="material-icons"> location_on </span>
+              <span class="svg-icons i-location"></span>
               <select>
                 <option value="value1">請選擇影城</option>
                 <option value="value2">Value 2</option>
@@ -187,7 +275,7 @@
               </select>
             </div>
             <div>
-              <span class="material-icons"> movie </span>
+              <span class="svg-icons i-movie"></span>
               <select>
                 <option value="value1">請選擇電影</option>
                 <option value="value2">Value 2</option>
@@ -195,7 +283,7 @@
               </select>
             </div>
             <div>
-              <span class="material-icons"> calendar_month </span>
+              <span class="svg-icons i-calendar"></span>
               <select>
                 <option value="value1">請選擇日期</option>
                 <option value="value2">Value 2</option>
@@ -203,24 +291,23 @@
               </select>
             </div>
             <div>
-              <span class="material-icons"> watch_later </span>
+              <span class="svg-icons i-clock"></span>
               <select>
                 <option value="value1">請選擇場次</option>
                 <option value="value2">Value 2</option>
-                <opti value="value3">Value 3</opti
-                  on>
+                <opti value="value3">Value 3</opti on>
               </select>
             </div>
           </div>
         </div>
         <div class="lastestnew row-5">
           <div class="main-title l-font">
-            <div class="s-font">LATEST NEWS</div>
+            <div class="">LATEST NEWS</div>
             <div>最新消息</div>
           </div>
           <div class="news-box">
             <a href="#">
-              <img src="https://fakeimg.pl/250x200/" alt="event-name"/>
+              <img src="https://fakeimg.pl/330x220/" alt="event-name" />
               <div class="new-info">
                 <p class="sub-title">
                   看指定電影送限定海報看指定電影送限定海報看指定電影送限定海報看指定電影送限定海報
@@ -234,7 +321,7 @@
             </a>
 
             <a href="#">
-              <img src="https://fakeimg.pl/250x200/" alt="event-name"/>
+              <img src="https://fakeimg.pl/330x220/" alt="event-name" />
               <div class="new-info">
                 <p class="sub-title">
                   看指定電影送限定海報看指定電影送限定海報看指定電影送限定海報看指定電影送限定海報
