--- a/movie-info.html
+++ b/movie-info.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 
 <head>
 <meta charset="UTF-8" />
@@ -44,22 +44,22 @@
     <section class="section">
       <div class="content content-row movie-info">
         <div class="movie-item row-3">
-          <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
+          <img src="https://fakeimg.pl/420x595/" alt="movie-name" />
         </div>
         <div class="movie-item row-7">
           <div class="movie-level y12">護6級</div>
           <div class="movie-title">
-            <p class="l-font ellipsis">劫命救護</p>
-            <span class="s-font ellipsis">AMBULANCE</span>
+            <p class="l-font">劫命救護</p>
+            <span class="s-font">AMBULANCE</span>
           </div>
           <div class="up-date s-font">上映日期 2022-03-25</div>
-          <button class="book-btn"><a href="book-step1.html"><span class="material-icons"> featured_play_list </span>前往訂票</a></button>
+          <button class="book-btn"><a href="book-step1.html"><span class="svg-icons i-ticket"></span>前往訂票</a></button>
           <div class="list-item">
-            <div class="list-row">導演<span>麥可貝</span></div>
-            <div class="list-row">演員<div><span class="">傑克葛倫霍、愛莎岡薩雷、葉海雅阿巴杜馬丁二世傑克葛倫霍傑克葛倫霍、愛莎岡薩雷</span></div>
+            <div class="list-row"><span>導演</span><span>麥可貝</span></div>
+            <div class="list-row"><span>演員</span><span>傑克葛倫霍、愛莎岡薩雷、葉海雅阿巴杜馬丁二世傑克葛倫霍傑克葛倫霍、愛莎岡薩雷傑克葛倫</span>
             </div>
-            <div class="list-row">類型<span>動作、懸疑、驚悚、劇情</span></div>
-            <div class="list-row">片長<span>136分鐘</span></div>
+            <div class="list-row"><span>類型</span><span>動作、懸疑、驚悚、劇情</span></div>
+            <div class="list-row"><span>片長</span><span>136分鐘</span></div>
           </div>
         </div>
       </div>
