--- a/movies.html
+++ b/movies.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 
 <head>
 <meta charset="UTF-8" />
@@ -44,7 +44,7 @@
     <section class="section">
       <div class="content movies">
         <div class="main-title l-font">
-          <div class="s-font">NOW SHOWING</div>
+          <div class="">NOW SHOWING</div>
           <div>現正熱映</div>
         </div>
         <div class="tab actions">
