--- a/news-info.html
+++ b/news-info.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 
 <head>
 <meta charset="UTF-8" />
@@ -49,7 +49,7 @@
         </div>
         <div class="content-row">
           <div class="row-5 row-left">
-            <img src="https://fakeimg.pl/450x250/" alt="event-name" />
+            <img src="https://fakeimg.pl/720x480/" alt="event-name" />
           </div>
           <div class="row-5 row-right">
             <div>
