--- a/news.html
+++ b/news.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 
 <head>
 <meta charset="UTF-8" />
@@ -44,13 +44,13 @@
     <section class="section">
       <div class="content news">
         <div class="main-title l-font">
-          <div class="s-font">SPECIAL EVENT</div>
+          <div class="">SPECIAL EVENT</div>
           <div>影城活動</div>
         </div>
         <div class="content-row">
           <div class="event row-3-1">
             <a href="news-info.html ">
-            <img src="https://fakeimg.pl/350x250/" alt="event-name" />
+            <img src="https://fakeimg.pl/510x340/" alt="event-name" />
             <div>
               <p class="sub-title">
                 看指定電影送限定海報
@@ -62,7 +62,7 @@
           </div>
           <div class="event row-3-1">
             <a href="">
-            <img src="https://fakeimg.pl/350x250/" alt="event-name" />
+            <img src="https://fakeimg.pl/510x340/" alt="event-name" />
             <div>
               <p class="sub-title">
                 全台獨家 怪獸與鄧不力多的秘密 特別場
@@ -74,7 +74,7 @@
           </div>
           <div class="event row-3-1">
             <a href="">
-            <img src="https://fakeimg.pl/350x250/" alt="event-name" />
+            <img src="https://fakeimg.pl/510x340/" alt="event-name" />
             <div>
               <p class="sub-title">
                 張國榮系列電影 數位修復版百老匯限定上映
@@ -86,7 +86,7 @@
           </div>
           <div class="event row-3-1">
             <a href="">
-            <img src="https://fakeimg.pl/350x250/" alt="event-name" />
+            <img src="https://fakeimg.pl/510x340/" alt="event-name" />
             <div>
               <p class="sub-title">
                 張國榮系列電影 數位修復版百老匯限定上映
@@ -98,7 +98,7 @@
           </div>
           <div class="event row-3-1">
             <a href="">
-            <img src="https://fakeimg.pl/350x250/" alt="event-name" />
+            <img src="https://fakeimg.pl/510x340/" alt="event-name" />
             <div>
               <p class="sub-title">
                 限量電影套餐 百老匯限定發售
@@ -114,13 +114,13 @@
     <section class="section">
       <div class="content news">
         <div class="main-title l-font">
-          <div class="s-font">TICKET OFFERS</div>
+          <div class="">TICKET OFFERS</div>
           <div>銀行優惠</div>
         </div>
         <div class="content-row">
           <div class="event row-3-1">
             <a href="">
-                <img src="https://fakeimg.pl/350x250/" alt="event-name" />
+                <img src="https://fakeimg.pl/510x340/" alt="event-name" />
                 <div>
                   <p class="sub-title">
                     看指定電影送限定海報
@@ -132,7 +132,7 @@
           </div>
           <div class="event row-3-1">
             <a href="">
-            <img src="https://fakeimg.pl/350x250/" alt="event-name" />
+            <img src="https://fakeimg.pl/510x340/" alt="event-name" />
             <div>
               <p class="sub-title">
                 全台獨家 怪獸與鄧不力多的秘密 特別場
@@ -144,7 +144,7 @@
           </div>
           <div class="event row-3-1">
             <a href="">
-            <img src="https://fakeimg.pl/350x250/" alt="event-name" />
+            <img src="https://fakeimg.pl/510x340/" alt="event-name" />
             <div>
               <p class="sub-title">
                 張國榮系列電影 數位修復版百老匯限定上映
