--- a/quick-view.html
+++ b/quick-view.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 
 <head>
 <meta charset="UTF-8" />
@@ -44,7 +44,7 @@
     <section class="section">
       <div class="content preview">
         <div class="main-title l-font">
-          <div class="s-font">QUICK VIEW</div>
+          <div class="">QUICK VIEW</div>
           <div>預覽座位</div>
         </div>
         <div class="seat-table">
