--- a/book-step1.html
+++ b/book-step1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 
 <head>
   <meta charset="UTF-8" />
@@ -45,7 +45,7 @@
     <section class="section">
       <div class="content book-tickets">
         <div class="main-title l-font">
-          <div class="s-font">ONLINE TICKET</div>
+          <div class="">ONLINE TICKET</div>
           <div>線上訂票</div>
         </div>
         <div class="step-bar">
@@ -65,7 +65,7 @@
               <div class="movie-level y12">護6級</div>
               <div class="movie-title">
                 <p class="l-font">劫命救護</p>
-                <span class="s-font">AMBULANCE</span>
+                <span class="s-font ">AMBULANCE</span>
               </div>
             </div>
             <div class="content-row movie-detail">
@@ -78,7 +78,7 @@
           </div>
           <div class="row-right row-3 ">
             <div class="summary l-font">
-              <span class="material-icons"> featured_play_list </span>ORDER SUMMARY
+              <span class="material-icons "> featured_play_list </span>ORDER SUMMARY
             </div>
             <div class="summary-detail">
               <li><span class="ticket-name">全票</span>X<span class="ticket-number">8</span>=<span
@@ -102,7 +102,7 @@
     <section class="section">
       <div class="content tickets-package">
         <div class="main-title l-font">
-          <div class="s-font">CHOOSE YOUR TICKET</div>
+          <div class="">CHOOSE YOUR TICKET</div>
           <div>請選擇票種與張數</div>
         </div>
         <div class="content-row">
@@ -267,10 +267,10 @@
             </ul>
           </div>
           <div class="actions">
-            <a href="book-step1.html" class="back actions-btn">
+            <a href="book-step1.html" class="back actions-btn ">
               <span class="material-icons">west</span>BACK
             </a>
-            <a href="book-step2.html" class="next actions-btn">
+            <a href="book-step2.html" class="next actions-btn ">
               NEXT<span class="material-icons">east</span>
             </a>
           </div>
