--- a/book-step4.html
+++ b/book-step4.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 
 <head>
 <meta charset="UTF-8" />
@@ -45,7 +45,7 @@
     <section class="section">
       <div class="content book-tickets">
         <div class="main-title l-font">
-          <div class="s-font">ONLINE TICKET</div>
+          <div class="">ONLINE TICKET</div>
           <div>線上訂票</div>
         </div>
         <div class="step-bar">
